Added support for LocalDate and LocalDateTime Please note: DBvolution does not support timezone because they are a hot mess. Any time zone support you experienced was accidental